# blaise

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  deploy.sh  deploy_docker.sh  docker_build.sh  docker_push.sh  flake.nix  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benches/: blaise.rs
crates/server/: Cargo.toml  LICENSE  README.md  start_logo.txt
crates/server/http_tests/: bruno.json  gtfs-age.bru  gtfs-fetch_url.bru  near-area.bru  near-stop.bru  near.bru  routing.bru  search-area.bru  search-stop.bru  search.bru
crates/server/ontrack_bruno/: bruno.json  routing.bru  search.bru
crates/server/src/: main.rs  state.rs
crates/server/src/api/: gtfs.rs  mod.rs  routing.rs  search.rs
crates/server/src/dto/: area.rs  itinerary.rs  mod.rs  stop.rs
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  intro.md  library.md  server.md
src/: lib.rs  prelude.rs
src/engine/: area.rs  fuzzy.rs  geo.rs  mod.rs  routing.rs  search.rs  stop.rs  stop_time.rs  trip.rs
src/engine/routing/: graph.rs  itinerary.rs  mod.rs
src/gtfs/: config.rs  data.rs  loader.rs  mod.rs  models.rs
src/raptor/: allocator.rs  discovery.rs  explorer.rs  itinerary.rs  location.rs  mod.rs  path.rs  state.rs
src/repository/: entities.rs  mod.rs  models.rs
src/repository/source/: gtfs.rs  mod.rs
src/router/: graph.rs  itinerary.rs  location.rs  mod.rs  state.rs
src/shared/: fuzzy.rs  geo.rs  mod.rs  time.rs
tests/: distance_tests.rs  time_tests.rs
tests/engine_tests/: distance_tests.rs  fuzzy_tests.rs  mod.rs  search_tests.rs
tests/gtfs_tests/: loader_tests.rs
