[package]
version = "0.1.0"
name = "ontrack"
description = "High-performance Rust library for routing, searching, and querying GTFS transit data with minimal runtime allocations."
authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VincentBrodin/ontrack"
edition = "2024"
keywords = ["SDK", "SL", "ResRobot", "GTFS"]

[workspace]
members = ["crates/server"]
resolver = "1"

[workspace.dependencies]
ontrack = { path = "." }

[features]

[dependencies]
chrono = "0.4.42"
csv = "1.4.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
zip = "6.0.0"

[dev-dependencies]
