[package]
version = "0.1.1"
name = "blaise"
description = "A fast, local-first engine for GTFS transit data. Handles routing, fuzzy search, and geospatial queries without relying on external APIs."
authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VincentBrodin/blaise"
edition = "2024"
keywords = [
  "transit",
  "gtfs",
  "routing-engine",
  "raptor",
  "public-transport",
]

[workspace]
members = ["crates/server"]
resolver = "1"

[workspace.dependencies]
blaise = { path = "." }

[features]

[dependencies]
chrono = "0.4.42"
csv = "1.4.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
zip = "6.0.0"

[dev-dependencies]
