[package]
name = "server"
version = "0.1.3"
edition = "2024"
publish = false

[[bin]]
name = "blaise-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
blaise.workspace = true
reqwest = { version = "0.13.1", features = ["stream", "gzip"] }
futures-util = "0.3.31"
crossbeam-queue = "0.3.12"
